tests/knowledge/testing-accounts-data/account-data-ssm-param-kms-keys/test/us-east-1/ec2-describe-network-interfaces.json
{
    "NetworkInterfaces": [
        {
            "Attachment": {
                "AttachmentId": "ela-attach-5ccae159",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1c",
            "Description": "AWS Lambda VPC ENI-custom_email_sender-dev-imanuel-80a124c5-49ab-4189-8975-23c91e432463",
            "Groups": [
                {
                    "GroupId": "sg-027af7511b7f3b7f3",
                    "GroupName": "Cloudrail-dev-imanuel-Lambda-SG"
                }
            ],
            "InterfaceType": "lambda",
            "Ipv6Addresses": [],
            "MacAddress": "0a:aa:51:38:85:e3",
            "NetworkInterfaceId": "eni-099832e3131f50bc9",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-10-21-139-144.ec2.internal",
            "PrivateIpAddress": "10.21.139.144",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-139-144.ec2.internal",
                    "PrivateIpAddress": "10.21.139.144"
                }
            ],
            "RequesterId": "AROARVZ4AQRHQQPLVYCKB:749678902839",
            "RequesterManaged": false,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-05a12b58cb8bb928e",
            "TagSet": [],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-ec575fe9",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1c",
            "Description": "Network Interface for Transit Gateway Attachment tgw-attach-01078ba9231e9bf2a",
            "Groups": [],
            "InterfaceType": "transit_gateway",
            "Ipv6Addresses": [],
            "MacAddress": "0a:8e:86:7b:25:91",
            "NetworkInterfaceId": "eni-0eb0ac2e334d114fc",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-10-21-139-136.ec2.internal",
            "PrivateIpAddress": "10.21.139.136",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-139-136.ec2.internal",
                    "PrivateIpAddress": "10.21.139.136"
                }
            ],
            "RequesterId": "936118442230",
            "RequesterManaged": false,
            "SourceDestCheck": false,
            "Status": "in-use",
            "SubnetId": "subnet-05a12b58cb8bb928e",
            "TagSet": [],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-c1ad5bd0",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1b",
            "Description": "AWS Lambda VPC ENI-custom_email_sender-dev-imanuel-d1df4608-e726-41bc-8fee-e9101f094090",
            "Groups": [
                {
                    "GroupId": "sg-027af7511b7f3b7f3",
                    "GroupName": "Cloudrail-dev-imanuel-Lambda-SG"
                }
            ],
            "InterfaceType": "lambda",
            "Ipv6Addresses": [],
            "MacAddress": "12:ea:5a:48:56:c5",
            "NetworkInterfaceId": "eni-0db3478219d893abb",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-10-21-137-83.ec2.internal",
            "PrivateIpAddress": "10.21.137.83",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-137-83.ec2.internal",
                    "PrivateIpAddress": "10.21.137.83"
                }
            ],
            "RequesterId": "AROARVZ4AQRHQQPLVYCKB:749678902839",
            "RequesterManaged": false,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-004d655196329d93a",
            "TagSet": [],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Attachment": {
                "AttachTime": "2021-02-12T16:46:10+00:00",
                "AttachmentId": "eni-attach-0a013240ab812ca97",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-rds",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1b",
            "Description": "RDSNetworkInterface",
            "Groups": [
                {
                    "GroupId": "sg-066dcae2727b42cb5",
                    "GroupName": "cloudrail-dev-imanuel-DB-SG"
                }
            ],
            "InterfaceType": "interface",
            "Ipv6Addresses": [],
            "MacAddress": "12:3d:69:ad:d5:07",
            "NetworkInterfaceId": "eni-066ca1678a8088bfc",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-10-21-136-109.ec2.internal",
            "PrivateIpAddress": "10.21.136.109",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-136-109.ec2.internal",
                    "PrivateIpAddress": "10.21.136.109"
                }
            ],
            "RequesterId": "amazon-rds",
            "RequesterManaged": true,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-004d655196329d93a",
            "TagSet": [],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-7335fe62",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1b",
            "Description": "Network Interface for Transit Gateway Attachment tgw-attach-01078ba9231e9bf2a",
            "Groups": [],
            "InterfaceType": "transit_gateway",
            "Ipv6Addresses": [],
            "MacAddress": "12:ec:4b:35:3c:6f",
            "NetworkInterfaceId": "eni-08061d3358834e657",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-10-21-136-115.ec2.internal",
            "PrivateIpAddress": "10.21.136.115",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-136-115.ec2.internal",
                    "PrivateIpAddress": "10.21.136.115"
                }
            ],
            "RequesterId": "936118442230",
            "RequesterManaged": false,
            "SourceDestCheck": false,
            "Status": "in-use",
            "SubnetId": "subnet-004d655196329d93a",
            "TagSet": [],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Association": {
                "AllocationId": "eipalloc-0aa74ebd8bda38f29",
                "AssociationId": "eipassoc-01263b64171866256",
                "IpOwnerId": "115553109071",
                "PublicDnsName": "ec2-54-166-49-187.compute-1.amazonaws.com",
                "PublicIp": "54.166.49.187"
            },
            "Attachment": {
                "AttachmentId": "ela-attach-a04fb8b1",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1b",
            "Description": "Interface for NAT Gateway nat-0d6dceeb94081edbd",
            "Groups": [],
            "InterfaceType": "nat_gateway",
            "Ipv6Addresses": [],
            "MacAddress": "12:96:ba:5f:53:d9",
            "NetworkInterfaceId": "eni-0f52bdadb1ed94470",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-10-21-128-150.ec2.internal",
            "PrivateIpAddress": "10.21.128.150",
            "PrivateIpAddresses": [
                {
                    "Association": {
                        "AllocationId": "eipalloc-0aa74ebd8bda38f29",
                        "AssociationId": "eipassoc-01263b64171866256",
                        "IpOwnerId": "115553109071",
                        "PublicDnsName": "ec2-54-166-49-187.compute-1.amazonaws.com",
                        "PublicIp": "54.166.49.187"
                    },
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-128-150.ec2.internal",
                    "PrivateIpAddress": "10.21.128.150"
                }
            ],
            "RequesterId": "583328430953",
            "RequesterManaged": true,
            "SourceDestCheck": false,
            "Status": "in-use",
            "SubnetId": "subnet-07b7849af809e164a",
            "TagSet": [],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-4e680655",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1d",
            "Description": "Network Interface for Transit Gateway Attachment tgw-attach-01078ba9231e9bf2a",
            "Groups": [],
            "InterfaceType": "transit_gateway",
            "Ipv6Addresses": [],
            "MacAddress": "0e:d7:35:67:ab:01",
            "NetworkInterfaceId": "eni-021326131a5b41407",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-10-21-141-219.ec2.internal",
            "PrivateIpAddress": "10.21.141.219",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-141-219.ec2.internal",
                    "PrivateIpAddress": "10.21.141.219"
                }
            ],
            "RequesterId": "936118442230",
            "RequesterManaged": false,
            "SourceDestCheck": false,
            "Status": "in-use",
            "SubnetId": "subnet-04d441d9f2365b71a",
            "TagSet": [],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-0076f81b",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1d",
            "Description": "AWS Lambda VPC ENI-custom_email_sender-dev-imanuel-117a5cd3-454b-4817-8cd8-d236e9622d83",
            "Groups": [
                {
                    "GroupId": "sg-027af7511b7f3b7f3",
                    "GroupName": "Cloudrail-dev-imanuel-Lambda-SG"
                }
            ],
            "InterfaceType": "lambda",
            "Ipv6Addresses": [],
            "MacAddress": "0e:2a:8e:20:a1:eb",
            "NetworkInterfaceId": "eni-0934cb9951924a096",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-10-21-141-16.ec2.internal",
            "PrivateIpAddress": "10.21.141.16",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-141-16.ec2.internal",
                    "PrivateIpAddress": "10.21.141.16"
                }
            ],
            "RequesterId": "AROARVZ4AQRHQQPLVYCKB:749678902839",
            "RequesterManaged": false,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-04d441d9f2365b71a",
            "TagSet": [],
            "VpcId": "vpc-04a1c5d8672155142"
        }
    ]
}
