tests/knowledge/testing-accounts-data/account-data-ssm-param-kms-keys/test/us-east-1/ec2-describe-transit-gateway-vpc-attachments.json
{
    "TransitGatewayVpcAttachments": [
        {
            "CreationTime": "2021-02-12T17:34:30+00:00",
            "Options": {
                "DnsSupport": "enable",
                "Ipv6Support": "disable"
            },
            "State": "available",
            "SubnetIds": [
                "subnet-04d441d9f2365b71a",
                "subnet-05a12b58cb8bb928e",
                "subnet-004d655196329d93a"
            ],
            "Tags": [],
            "TransitGatewayAttachmentId": "tgw-attach-01078ba9231e9bf2a",
            "TransitGatewayId": "tgw-0bb1396f4b2cc782c",
            "VpcId": "vpc-04a1c5d8672155142",
            "VpcOwnerId": "115553109071"
        }
    ]
}
